[package]
name = "mdutil"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
rayon = "1.5"
base64 = "0.13"
regex = "1.5"
once_cell = "1.8"
anyhow = "1.0"
log = "0.4"
url = "2.2"
tokio = { version = "1.8", features = [
    "rt",
    "rt-multi-thread",
    "fs",
    "macros",
    "test-util",
] }
env_logger = "0.9"
reqwest = { version = "0.11" }
ctor = "0.1"
strum_macros = "0.21"
strum = "0.21"
humantime = "2.1"
structopt = "0.3"
thiserror = "1.0"
